--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,9 @@
-/* .App {
+html {
+  background-color: rgb(40, 20, 20);
+}
+
+header {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-.kenel {
-  background-image: url(./Puppies/park-7.jpg);
-  background-position: center;
-  background-size: cover;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-button {
-  border: 1px solid darkred;
-  margin: 20px;
-}
-
-img {
-  width: 300px;
-  height: 300px;
+  font-family: 'Girassol', cursive;
+  color: azure;
 }
