--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -2,7 +2,7 @@
     z-index: 1;
     left: 0;
     top: 0;
-    display: none;
+    display: block;
     background: rgba(175, 175, 175, 0.5);
     position: fixed;
     width: 100%;
