got modal to open and close but i cant get the images to pass over

--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -21,6 +21,12 @@
     padding: 10px;
 }
 
+.dogImg {
+    outline: 2px solid black;
+    max-width: 70%;
+    max-height: 50%;
+}
+
 span {
     float: right;
     font-size: 25px;
