--- a/src/App.css
+++ b/src/App.css
@@ -18,16 +18,14 @@ header {
   align-content: center;
 }
 
-button {
-  margin: 30px;
-}
-
-button:hover {
-  cursor: pointer;
-}
-
 img {
   width: 300px;
   height: 300px;
   margin: 1px auto;
+  margin: 40px;
 }
+
+img:hover {
+  cursor: pointer;
+}
+
