--- a/src/Puppies/Puppies.css
+++ b/src/Puppies/Puppies.css
@@ -6,18 +6,24 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-}
-  
-button {
-    margin: 30px;
-}
+  }
 
-button:hover {
-    cursor: pointer;
+.pound {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
 }
   
 img {
     width: 300px;
     height: 300px;
-    margin: 1px auto;
+    margin: 60px;
+    background-position: center;
+    background-size: cover;
+}
+  
+img:hover {
+    cursor: pointer;
+    border: 1px solid whitesmoke;
 }
